// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.bundle should set the bundle using a regular expression 1`] = `
Object {
  "automaticNameDelimiter": "/",
  "cacheGroups": Object {
    "react": Object {
      "filename": "js/bundle/react/[name].js",
      "idHint": "react",
      "priority": -10,
      "test": /react/,
    },
  },
  "chunks": "all",
  "minSize": 0,
}
`;

exports[`bud.bundle should set the bundle using a string 1`] = `
Object {
  "automaticNameDelimiter": "/",
  "cacheGroups": Object {
    "react": Object {
      "filename": "js/bundle/react/[name].js",
      "idHint": "react",
      "priority": -10,
      "test": /\\[\\\\/\\]\\(react\\)\\[\\\\/\\]/,
    },
  },
  "chunks": "all",
  "minSize": 0,
}
`;

exports[`bud.bundle should set the bundle using an array of strings 1`] = `
Object {
  "automaticNameDelimiter": "/",
  "cacheGroups": Object {
    "react": Object {
      "filename": "js/bundle/react/[name].js",
      "idHint": "react",
      "priority": -10,
      "test": /\\[\\\\/\\]\\(react\\|react-dom\\)\\[\\\\/\\]/,
    },
  },
  "chunks": "all",
  "minSize": 0,
}
`;

exports[`bud.bundle when hashing is enabled should include the hash in the \`filename\` property: js/bundle/react/[name].[contenthash].js 1`] = `"js/bundle/react/[name].[contenthash].js"`;
